# museumbackend

./: .env_sample  .gitignore  Makefile  README.md  automation_script.py  docker-compose.yml  pyproject.toml  requirements.txt
app/: settings.py  testing_settings.py  urls.py  views.py
docker/: Dockerfile
fileServers/: apps.py  views.py
museum/fileServer/: apps.py  views.py
museum/museum/: settings.py  urls.py
museum/sites/: models.py  serializers.py  urls.py  views.py
museum/sites/migrations/: 0001_initial.py  0002_alter_site_additional_info.py  0003_auto_20210913_2036.py  0004_alter_site_preview.py  0004_remove_site_time_period.py  0005_alter_site_preview.py
museum/users/: backends.py  models.py  urls.py
museum/users/migrations/: 0001_initial.py
sites/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
sites/migrations/: 0001_initial.py  0002_auto_20211015_0229.py
sites/tests/: test_filters.py  test_uploads.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_password.py
users/test/: tests.py
